# vepub

./: .gitignore  CLAUDE.md  DEVLOG.md  OPTIMIZATION.md  README.md  ROADMAP.md  package-lock.json  package.json  plan.md
.github/workflows/: ci.yml
apps/desktop/: eslint.config.mjs  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/reader/: AnalysisProgress.tsx  CharacterCard.tsx  CharacterEditModal.tsx  CharacterPanel.tsx  CharacterPickerModal.tsx  HardwareBadge.tsx  IllustrationCard.tsx  ImageLightbox.tsx  PlayerBar.tsx  SelectionToolbar.tsx  SettingsPanel.tsx  TableOfContents.tsx
apps/desktop/src/hooks/: useAnalysisJob.ts  useAudioStream.ts  useHighlight.ts  usePolling.ts
apps/desktop/src/lib/: api.ts  constants.ts  model-api.ts  tts-api.ts
apps/desktop/src/pages/: IllustrationTest.tsx  Library.tsx  ModelManager.tsx  Reader.tsx
apps/desktop/src/stores/: library.ts  player.ts  reader.ts
backend/: .gitignore  config.py  illustration_settings.json  llm_settings.json  main.py  model_registry.json  pyproject.toml  sidecar_main.py  test_e2e.py  tts_settings.json  vepub-backend.spec
backend/routers/: characters.py  epub.py  health.py  illustration.py  illustration_common.py  llm.py  models.py  tts.py
backend/services/: db.py  downloader.py  epub_parser.py  gpu_manager.py  hardware_detector.py  illustration_engine.py  llm_engine.py  model_registry.py  models_manager.py  text_chunker.py  tts_engine.py  tts_settings.py  tts_voice.py
backend/services/backends/: protocol.py  tts_omnivoice.py  tts_pipeline.py
backend/services/illustration/: face_extractor.py  generation.py  pipelines.py  prompt_builder.py  refs.py  settings.py
backend/services/llm/: char_schema.py  server.py  settings.py  tasks.py
backend/tests/: conftest.py  test_pure_functions.py
plans/: consistency-alignment-refactor.md
