[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.136.1",
    "fugashi>=1.5.2",
    "jieba>=0.42.1",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "omnivoice>=0.1.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "soundfile>=0.13.1",
    "spacy>=3.8.14",
    "torch>=2.12.0",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]
