[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.19.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "diffusers",
    "ebooklib>=0.20",
    "einops>=0.8.0",
    "fastapi>=0.136.1",
    "fugashi>=1.5.2",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "omnivoice>=0.1.5",
    "pillow>=11.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "rembg>=2.0.59",
    "soundfile>=0.13.1",
    "spacy>=3.8.14",
    "timm>=1.0.11",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.46.0",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
diffusers = { git = "https://github.com/huggingface/diffusers", branch = "main" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long（由 line-length 控制）
    "F401",   # 部分未使用 import 是刻意延遲載入（torch / diffusers 等）
]

[tool.ruff.lint.isort]
known-first-party = ["services", "routers", "config"]
